information aligned, need to fix form regestration

--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body {
     flex-direction: row;
     height: 100vh;
     width: 100vw;
+    overflow: hidden;
 }
 
 .image-container {
@@ -31,4 +32,41 @@ a {
 
 .form-container {
     width: 70vw;
+    display: flex;
+    flex-direction: column;
+}
+
+.information {
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-end;
+    height: 33vh;
+    background-color: #EFEFEF;
+}
+
+.registration {
+    height: 33vh;
+    background-color: white;
+}
+
+.submission {
+    height: 33vh;
+    background-color: #EFEFEF;
+}
+
+h2 {
+    margin-left: 50px;
+    margin-bottom: 60px;
+}
+
+.main-form {
+    display: flex;
+    flex-direction: row;
+}
+
+.form-details {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
 }
